src/validation/tests/snapshots/rusty__validation__tests__assignment_validation_tests__struct_assignment_validation.snap
---
source: src/validation/tests/assignment_validation_tests.rs
expression: "&diagnostics"
---
error: Invalid assignment: cannot assign 'STRUCT1' to 'REAL'
   ┌─ <internal>:46:5
   │
46 │     v_real := v_struct1; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRUCT1' to 'REAL'

error: Invalid assignment: cannot assign 'REAL' to 'STRUCT1'
   ┌─ <internal>:47:5
   │
47 │     v_struct1 := v_real; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'REAL' to 'STRUCT1'

error: Invalid assignment: cannot assign 'STRUCT2' to 'STRUCT1'
   ┌─ <internal>:50:5
   │
50 │     v_struct1 := v_struct2; // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRUCT2' to 'STRUCT1'

error: Invalid assignment: cannot assign 'STRUCT2' to 'STRUCT1'
   ┌─ <internal>:53:19
   │
53 │     v_struct3 := (var_struct1 := v_struct2); // INVALID
   │                   ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRUCT2' to 'STRUCT1'

error: Invalid assignment: cannot assign 'STRUCT2' to 'STRUCT1'
   ┌─ <internal>:56:10
   │
56 │     myFB(var_inout_struct1 := v_struct2); // INVALID
   │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign 'STRUCT2' to 'STRUCT1'

error: Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT1'
   ┌─ <internal>:67:5
   │
67 │     v_ref_to_struct1 := REF(v_real); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT1'

error: Invalid assignment: cannot assign '__POINTER_TO_STRING' to 'REF_TO STRUCT1'
   ┌─ <internal>:68:5
   │
68 │     v_ref_to_struct1 := REF(v_string); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_STRING' to 'REF_TO STRUCT1'

error: Invalid assignment: cannot assign '__POINTER_TO_CHAR' to 'REF_TO STRUCT1'
   ┌─ <internal>:69:5
   │
69 │     v_ref_to_struct1 := REF(v_char); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_CHAR' to 'REF_TO STRUCT1'

error: Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT1'
   ┌─ <internal>:71:5
   │
71 │     v_ref_to_struct1 := &(v_real); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_REAL' to 'REF_TO STRUCT1'

error: Invalid assignment: cannot assign '__POINTER_TO_STRING' to 'REF_TO STRUCT1'
   ┌─ <internal>:72:5
   │
72 │     v_ref_to_struct1 := &(v_string); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_STRING' to 'REF_TO STRUCT1'

error: Invalid assignment: cannot assign '__POINTER_TO_CHAR' to 'REF_TO STRUCT1'
   ┌─ <internal>:73:5
   │
73 │     v_ref_to_struct1 := &(v_char); // INVALID
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid assignment: cannot assign '__POINTER_TO_CHAR' to 'REF_TO STRUCT1'


